added repo count to bookmark group

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -144,6 +144,7 @@
         <article class="card repo-group-item" data-id="{id}">
           <header class="card-header hd" role="tab" id="repo_group_hd_{id}">
             <a href="#repo_group_list_{id}" data-toggle="collapse" data-parent="#repo-group" aria-expanded="false" aria-controls="repo_group_list_{id}">{name}</a>
+            &nbsp;<span class="label label-info label-pill">{itemCount}</span>
           </header>
           <section class="card-block repo-list collapse" id="repo_group_list_{id}" role="tabpanel" aria-labelledby="repo_group_hd_{id}">
             {items}
