--- a/static/app/index.html
+++ b/static/app/index.html
@@ -206,7 +206,7 @@
         <section class="list-group user-list">
           <script type="text/html">
           <article class="list-group-item user-item" data-id="{id}">
-            <a href="https://github.com/{name}">https://github.com/{name}</a>
+            <a href="https://github.com/{name}" target="_blank">https://github.com/{name}</a>
             <button class="btn btn-secondary btn-xs pull-xs-right sync" data-name="{name}" data-dismiss="modal"><i class="fa fa-refresh"></i> Sync</button>
           </article>
           </script>
