--- a/static/app/index.html
+++ b/static/app/index.html
@@ -197,6 +197,7 @@
         <h6 class="modal-title">Add GitHub Account</h6>
       </div>
       <div class="modal-body">
+        <div class="text-muted">*e.g. https://github.com/<span class="text-danger">account</span></div>
         <div class="input-group form">
           <input type="text" class="form-control" placeholder="Your GitHub account">
           <span class="input-group-btn">
@@ -207,7 +208,10 @@
           <script type="text/html">
           <article class="list-group-item user-item" data-id="{id}">
             <a href="https://github.com/{name}" target="_blank">https://github.com/{name}</a>
-            <button class="btn btn-secondary btn-xs pull-xs-right sync" data-name="{name}" data-dismiss="modal"><i class="fa fa-refresh"></i> Sync</button>
+            <div class="btn-group btn-group-xs pull-xs-right ctrl">
+              <button class="btn btn-secondary btn-xs del" data-id="{id}"><i class="fa fa-trash-o"></i> Remove</button>
+              <button class="btn btn-secondary btn-xs sync" data-name="{name}" data-dismiss="modal"><i class="fa fa-refresh"></i> Sync</button>
+            </div>
           </article>
           </script>
         </section>
