fix sync issue and order group&account by create DESC

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -202,7 +202,7 @@
       <div class="modal-body">
         <div class="text-muted">*e.g. https://github.com/<span class="text-danger">account</span></div>
         <div class="input-group form">
-          <input type="text" class="form-control" placeholder="Your GitHub account">
+          <input type="text" class="form-control" placeholder="GitHub account">
           <span class="input-group-btn">
             <button class="btn btn-secondary submit" type="button" data-dismiss="modal">Add</button>
           </span>
