optimized group edit&fix sync issue

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -153,7 +153,7 @@
             <article class="card repo-group-item" data-id="{id}">
               <header class="card-header hd" role="tab" id="repo_group_hd_{id}">
                 <a href="#repo_group_list_{id}" data-toggle="collapse" data-parent=".bd" aria-expanded="false" aria-controls="repo_group_list_{id}">{name}</a>
-                &nbsp;<span class="label label-info label-pill">{itemCount}</span>
+                &nbsp;<span class="label label-info label-pill count">{itemCount}</span>
                 <div class="btn-group btn-group-sm pull-xs-right ctrl">
                   <button class="btn btn-secondary btn-sm del" data-id="{id}"><i class="fa fa-trash-o"></i></button>
                 </div>
