--- a/static/app/index.html
+++ b/static/app/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>CODELF</title>
-  <meta name="description" content="Search over projects from GitHub, Bitbucket, Google Code and more to find real-world usage variable names" />
-  <meta name="keywords" content="Codelf,变量命名,函数命名,方法命名,变量命名神器,naming things,naming convention,variable naming,programming naming,programming variable dictionary">
+  <meta name="description" content="Group your GitHub stars and repos.Search over projects from GitHub, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project to find real-world usage variable names" />
+  <meta name="keywords" content="Codelf,变量命名,函数命名,方法命名,变量命名神器,GitHub 分组,Group GitHub stars,naming things,naming convention,programming naming">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="shortcut icon" href="resources/images/codelf_logo.png" >
   <link rel="apple-touch-icon" sizes="144x144"  href="resources/images/codelf_logo.png">
