added updated group

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -257,7 +257,7 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h6 class="modal-title">New Group</h6>
+        <h6 class="modal-title">Edit Group</h6>
       </div>
       <div class="modal-body">
         <input type="text" class="form-control" placeholder="Group name">
