--- a/static/app/index.html
+++ b/static/app/index.html
@@ -18,7 +18,7 @@
     @@include("resources/css/style.css")
   </style>
 </head>
-<body>
+<body ontuchstart="">
 <section class="container main">
   <header class="main-title">
     <header><h1><a href="./"><span>C</span><span>O</span><span>D</span><span>E</span><span>L</span><span>F</span></a></h1></header>
