fixed work break on mobile

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -190,7 +190,7 @@
             <article class="card repo-item" data-id="{id}" data-repoid="{originRepoId}" data-name="{_full_name}">
               <div class="card-block">
                 <header class="repo-item__hd"><h6><a href="{html_url}" target="_blank">{full_name}</a></h6></header>
-                <section class="repo-item__bd">{description}</section>
+                <section class="repo-item__bd fix-break-word">{description}</section>
               </div>
               <div class="card-footer">
                 <div class="btn-group btn-group-sm" role="group">
