--- a/static/app/index.html
+++ b/static/app/index.html
@@ -125,8 +125,7 @@
   </div>
 </section>
 <div class="bookmark-btn" data-toggle="tooltip" data-placement="right" title="Group GitHub stars">
-  <i class="bookmark-logo fa fa-bookmark fa-2x hidden-sm-up"></i>
-  <i class="bookmark-logo fa fa-bookmark fa-3x hidden-xs-down"></i>
+  <i class="bookmark-logo fa fa-bookmark fa-3x"></i>
 </div>
 <section class="modal fade bookmark-modal modal--fix" tabindex="-1" role="dialog" aria-labelledby="bookmarkModal" aria-hidden="true">
   <div class="modal-dialog modal-lg">
